--- a/public/css/index.css
+++ b/public/css/index.css
@@ -30,3 +30,8 @@ nav .brand-logo {
 footer.page-footer .footer-copyright {
   margin-left: 2%;
 }
+
+.ind_post img {
+  width: 30%;
+  margin-left: 30%;
+}
