Close #24 Make post.html page

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,6 +32,9 @@ footer.page-footer .footer-copyright {
 }
 
 .ind_post img {
-  width: 30%;
+  width: 40%;
   margin-left: 30%;
+}
+.ind_post h2 {
+  text-align: center;
 }
