#50 Make users management page functional

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -46,3 +46,8 @@ footer.page-footer .footer-copyright {
 .ind_post h2 {
   text-align: center;
 }
+
+.deleteIcon:hover {
+  color: red;
+  font-size: 2em;
+}
